samples/_failures_safe/1761182926_f3af46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef1b1b25.c: In function ‘main’:
./samples/SAFE/__tmp_ef1b1b25.c:156:12: error: missing terminating " character
  156 |     printf("Compression ratio:
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ef1b1b25.c:156:5: error: expected expression at end of input
  156 |     printf("Compression ratio:
      |     ^~~~~~
./samples/SAFE/__tmp_ef1b1b25.c:156:5: error: expected declaration or statement at end of input
